--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "mocha",
     "dev": "node server.js",
-    "build": "next build && next export",
+    "build": "next build",
     "export": "next export"
   },
   "author": "",
