--- a/package.json
+++ b/package.json
@@ -24,5 +24,6 @@
     "solc": "^0.4.26",
     "truffle-hdwallet-provider": "^1.0.17",
     "web3": "^1.3.5"
-  }
+  },
+  "engines" : { "node" : "10.x" }
 }
