--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "mocha",
     "dev": "node server.js",
     "build": "next build",
+    "start": "NODE_ENV=production node server.js",
     "export": "next export"
   },
   "author": "",
